creation of mcu ml html

--- a/sydney-work/MCU_Machine_Learning.ipynb
+++ b/sydney-work/MCU_Machine_Learning.ipynb
@@ -1805,50 +1805,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Year                     int64\n",
-       "Captain America          int64\n",
-       "Iron Man                 int64\n",
-       "Black Widow              int64\n",
-       "Thor                     int64\n",
-       "Hulk                     int64\n",
-       "Hawkeye                  int64\n",
-       "Nick Fury                int64\n",
-       "Vision                   int64\n",
-       "Spider-Man               int64\n",
-       "Star Lord                int64\n",
-       "Wanda                    int64\n",
-       "Ant-Man                  int64\n",
-       "Doctor Strange           int64\n",
-       "Black Panther            int64\n",
-       "Captain Marvel           int64\n",
-       "Runtime                  int64\n",
-       "IMDB Rating              int64\n",
-       "IMDB Gross               int64\n",
-       "Tomato Meter             int64\n",
-       "Tomato Audience Score    int64\n",
-       "Projected Gross          int64\n",
+       "Year                       int64\n",
+       "Captain America            int64\n",
+       "Iron Man                   int64\n",
+       "Black Widow                int64\n",
+       "Thor                       int64\n",
+       "Hulk                       int64\n",
+       "Hawkeye                    int64\n",
+       "Nick Fury                  int64\n",
+       "Vision                     int64\n",
+       "Spider-Man                 int64\n",
+       "Star Lord                  int64\n",
+       "Wanda                      int64\n",
+       "Ant-Man                    int64\n",
+       "Doctor Strange             int64\n",
+       "Black Panther              int64\n",
+       "Captain Marvel             int64\n",
+       "Runtime                    int64\n",
+       "IMDB Rating              float64\n",
+       "IMDB Gross               float64\n",
+       "Tomato Meter               int64\n",
+       "Tomato Audience Score      int64\n",
+       "Projected Gross          float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data[['IMDB Rating', 'Projected Gross']] = test_data[['IMDB Rating', 'Projected Gross']].applymap(np.int64)\n",
+    "test_data[['IMDB Rating', 'IMDB Gross', 'Projected Gross']] = test_data[['IMDB Rating', 'IMDB Gross', 'Projected Gross']].applymap(np.float64)\n",
     "test_data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
